Update learning logic