@@ -20,6 +20,9 @@ import com.edp.library.model.PaginationRequestDTO;
 import com.edp.library.model.learning.LearningResponseDTO;
 import com.edp.library.model.learning.LearningSubmissionResponseDTO;
 import com.edp.library.model.learning.LearningTagDTO;
+import com.edp.shared.client.auth.AuthServiceClient;
+import com.edp.shared.client.auth.model.UserProfileDto;
+import com.edp.shared.security.jwt.JwtUserContext;
 import jakarta.persistence.criteria.Path;
 import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
@@ -32,7 +35,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
-import java.time.Instant;
 import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -46,10 +48,11 @@ public class LearningServiceImpl implements LearningService {
     private final LearningSubmissionTagRepository learningSubmissionTagRepository;
     private final TagRepository tagRepository;
     private final LearningMapper learningMapper;
+    private final AuthServiceClient authServiceClient;
 
     @Override
     @Transactional
-    public LearningResponseDTO createLearning(LearningCreateRequestDTO request, Long submitterId, Long reviewerId) {
+    public LearningResponseDTO createLearning(LearningCreateRequestDTO request) {
         // 1. Validate and fetch active tags
         List<Long> tagIds = request.getTags().stream().map(LearningTagDTO::getTagId).collect(Collectors.toList());
         List<Tag> tags = tagRepository.findAllById(tagIds);
@@ -68,15 +71,16 @@ public class LearningServiceImpl implements LearningService {
             throw new InvalidOperationException("One or more selected tags are not active: " + inactiveTagIds);
         }
 
+        Long submitterId = JwtUserContext.getUserId();
+
         // 3. Create a new Learning entity (as per your preferred logic, always create a new root Learning for a new request)
         Learning learning = Learning.builder()
                 .employeeId(submitterId)
-                .createdAt(Instant.now())
                 .build();
         learning = learningRepository.save(learning);
 
         // 4. Create and save the new LearningSubmission for this new Learning
-        LearningSubmission submission = learningMapper.toLearningSubmission(request, learning, submitterId, reviewerId);
+        LearningSubmission submission = learningMapper.toLearningSubmission(request, learning, submitterId);
         submission = learningSubmissionRepository.save(submission);
 
         // 5. Save LearningSubmissionTag entries
@@ -106,11 +110,12 @@ public class LearningServiceImpl implements LearningService {
 
     @Override
     @Transactional
-    public LearningResponseDTO editRejectedLearningSubmission(Long learningId, LearningCreateRequestDTO request, Long submitterId, Long reviewerId) {
+    public LearningResponseDTO editRejectedLearningSubmission(Long learningId, LearningCreateRequestDTO request) {
         Learning learning = learningRepository.findById(learningId)
                 .orElseThrow(() -> new ResourceNotFoundException("Learning material not found with ID: " + learningId));
 
-        // TODO: Revise this check if needed
+        Long submitterId = JwtUserContext.getUserId();
+
         if (!learning.getEmployeeId().equals(submitterId)) {
             throw new InvalidOperationException("User is not authorized to edit this learning material.");
         }
@@ -126,7 +131,7 @@ public class LearningServiceImpl implements LearningService {
         List<Long> tagIds = request.getTags().stream().map(LearningTagDTO::getTagId).collect(Collectors.toList());
         List<Tag> tags = tagRepository.findAllById(tagIds);
         if (tags.size() != tagIds.size()) {
-            throw new ResourceNotFoundException("One or more tags not found. Provided IDs: " + tagIds + ", Found: " + tags.stream().map(Tag::getId).collect(Collectors.toList()));
+            throw new ResourceNotFoundException("One or more tags not found. Provided IDs: " + tagIds + ", Found: " + tags.stream().map(Tag::getId).toList());
         }
         Map<Long, Tag> activeTagsMap = tags.stream()
                 .filter(Tag::isActive)
@@ -139,8 +144,7 @@ public class LearningServiceImpl implements LearningService {
         }
 
         // Create and save the new LearningSubmission for the existing Learning material
-        LearningSubmission newSubmission = learningMapper.toLearningSubmission(request, learning, submitterId, reviewerId);
-
+        LearningSubmission newSubmission = learningMapper.toLearningSubmission(request, learning, submitterId);
         newSubmission = learningSubmissionRepository.save(newSubmission);
 
         // Save LearningSubmissionTag entries for the new submission
@@ -165,11 +169,13 @@ public class LearningServiceImpl implements LearningService {
 
     @Override
     @Transactional(readOnly = true)
-    public PaginationResponseDTO<LearningResponseDTO> getMyLearnings(Long employeeId, String statusFilter, Long tagIdFilter, PaginationRequestDTO paginationRequestDTO) {
+    public PaginationResponseDTO<LearningResponseDTO> getMyLearnings(String statusFilter, Long tagIdFilter, PaginationRequestDTO paginationRequestDTO) {
         Pageable pageable = PageRequest.of(
                 paginationRequestDTO.getPage(),
                 paginationRequestDTO.getSize()
         );
+
+        Long employeeId = JwtUserContext.getUserId();
 
         Specification<Learning> spec = (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
@@ -244,29 +250,46 @@ public class LearningServiceImpl implements LearningService {
 
     @Override
     @Transactional(readOnly = true)
-    public PaginationResponseDTO<LearningSubmissionResponseDTO> getPendingLearningSubmissionsForReview(Long managerId, PaginationRequestDTO paginationRequestDTO) {
+    public PaginationResponseDTO<LearningSubmissionResponseDTO> getPendingLearningSubmissionsForReview(PaginationRequestDTO paginationRequestDTO) {
 
         String actualSortBy = paginationRequestDTO.getSortBy();
         if ("createdAt".equalsIgnoreCase(actualSortBy)) {
             actualSortBy = "submittedAt"; // LearningSubmission uses submittedAt
         }
 
+        Long managerId = JwtUserContext.getUserId();
+        String token = JwtUserContext.getToken();
+        List<UserProfileDto> managedUsers = authServiceClient.getManagedUsers(managerId, token);
+        List<Long> managedUserIds = managedUsers.stream()
+                .map(UserProfileDto::getId)
+                .toList();
+
         Pageable pageable = PageRequest.of(
                 paginationRequestDTO.getPage(),
                 paginationRequestDTO.getSize(),
                 Sort.by(paginationRequestDTO.getSortDirection(), actualSortBy)
         );
-        Page<LearningSubmission> pendingSubmissions = learningSubmissionRepository.findByReviewerIdAndStatus(managerId, SubmissionStatus.PENDING, pageable);
+        Page<LearningSubmission> pendingSubmissions = learningSubmissionRepository.findBySubmitterIdInAndStatus(managedUserIds, SubmissionStatus.PENDING, pageable);
         return mapToPaginationResponseDTO(pendingSubmissions, learningMapper.toLearningSubmissionResponseDTOs(pendingSubmissions.getContent()));
     }
 
     @Override
     @Transactional
-    public LearningSubmissionResponseDTO reviewLearningSubmission(Long submissionId, SubmissionReviewRequestDTO reviewDTO, Long reviewerId) {
+    public LearningSubmissionResponseDTO reviewLearningSubmission(Long submissionId, SubmissionReviewRequestDTO reviewDTO) {
         LearningSubmission submission = learningSubmissionRepository.findById(submissionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Submission not found with ID: " + submissionId));
 
-        if (!submission.getReviewerId().equals(reviewerId)) {
+        Long reviewerId = JwtUserContext.getUserId();
+        String token = JwtUserContext.getToken();
+        List<UserProfileDto> managedUsers = authServiceClient.getManagedUsers(reviewerId, token);
+
+        Set<Long> managedUserIds = managedUsers.stream()
+                .map(UserProfileDto::getId)
+                .collect(Collectors.toSet());
+
+        boolean isResponsible = managedUserIds.contains(submission.getSubmitterId());
+
+        if (!isResponsible) {
             throw new InvalidOperationException("You are not authorized to review this submission.");
         }
 
@@ -282,8 +305,7 @@ public class LearningServiceImpl implements LearningService {
         }
 
         submission.setStatus(learningMapper.toSubmissionStatusEntity(reviewDTO.getStatus()));
-        // TODO: If the reviewed_at has an @UpdateTimestamp, will this line be removed?
-        submission.setReviewedAt(Instant.now());
+        submission.setReviewerId(reviewerId);
         submission.setReviewerComment(reviewDTO.getReviewerComment());
 
         LearningSubmission updatedSubmission = learningSubmissionRepository.save(submission);
@@ -294,7 +316,6 @@ public class LearningServiceImpl implements LearningService {
             // Only update if currentSubmission is not this approved one, or if its status is not APPROVED
             if (learning.getCurrentSubmission() == null || !learning.getCurrentSubmission().equals(updatedSubmission) || learning.getCurrentSubmission().getStatus() != SubmissionStatus.APPROVED) {
                 learning.setCurrentSubmission(updatedSubmission);
-//                learning.setUpdatedAt(Instant.now());
                 learningRepository.save(learning);
             }
         }
